Fix layout bug in Projects page

--- a/components/Project/Project.module.sass
+++ b/components/Project/Project.module.sass
@@ -3,7 +3,8 @@
 .picture_container
   position: relative
   max-width: 250px
-
+  width: 100%
+  margin: 0 auto
   
 .overlay 
   position: absolute
